feat(css): update css and sass files

--- a/site/index.html
+++ b/site/index.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Test</title>
+    <link rel="stylesheet" href="css/sass.css" />
+    <script type="text/javascript" src=""></script>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header">
-        <p>
-          Header text
-        </p>
+    <div class="page-wrapper">
+      <header class="page-header">
+        <div class="l-container">
+          <p>Header text</p>
+        </div>
       </header>
-      <main class="main">
-        Main text
+      <main class="page-main">
+        <div class="l-container">
+          <p>Main text</p>
+        </div>
       </main>
-      <footer class="footer">
-        Footer text
+      <footer class="page-footer">
+        <div class="l-container">
+          <p>Footer text</p>
+        </div>
       </footer>
     </div>
   </body>
