--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Test</title>
-    <link rel="stylesheet" href="css/sass.css" />
-    <script type="text/javascript" src=""></script>
+    <link rel="stylesheet" href="css/dev/style.css" />
   </head>
   <body>
     <div class="page-wrapper">
@@ -24,5 +23,6 @@
         </div>
       </footer>
     </div>
+    <script type="text/javascript" src="js/dist/script.min.js"></script>
   </body>
 </html>
