feat(DOMTraversing.js): first beta version of the traversing funciton of js lite library

--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,11 @@
       <main class="page-main">
         <div class="l-container">
           <p>Main text</p>
+          <ul id="birds">
+            <li>Orange-winged parrot</li>
+            <li class="endangered">Philippine eagle</li>
+            <li>Great white pelican</li>
+          </ul>
         </div>
       </main>
       <footer class="page-footer">
