doc(modules): added documentation

--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
           <p>Main text</p>
           <ul id="birds">
             <li>Orange-winged parrot</li>
-            <li class="endangered">Philippine eagle</li>
+            <li id="endangered">Philippine eagle</li>
             <li>Great white pelican</li>
           </ul>
         </div>
